--- a/bom.ini
+++ b/bom.ini
@@ -29,22 +29,28 @@ board_variant = [u'default']
 ; Whether to hide headers from output file
 hide_headers = False
 ; Whether to hide PCB info from output file
-hide_pcb_info = False
+hide_pcb_info = True
 
 [IGNORE_COLUMNS]
 ; Any column heading that appears here will be excluded from the Generated BoM
 ; Titles are case-insensitive
 Part Lib
 Footprint Lib
+Footprint
+R 25		; custom for thermistor
+B 25/85		; custom for thermistor
+
 
 [COLUMN_ORDER]
 ; Columns will apear in the order they are listed here
 ; Titles are case-insensitive
-Description
-Part
-Part Lib
 References
-Value
+Part
+Description
+Vendor
+Vendor Part
+Manufacturer
+Manufacturer Part
 Footprint
 Footprint Lib
 Quantity Per PCB
@@ -55,6 +61,8 @@ Datasheet
 ; List of fields used for sorting individual components into groups
 ; Components which match (comparing *all* fields) will be grouped together
 ; Field names are case-insensitive
+Vendor
+Manufacturer
 Part
 Part Lib
 Value
@@ -78,6 +86,7 @@ d	diode	d_small
 ; If there are any regex defined here, only components that match against ANY of them will be included in the BOM
 ; Column names are case-insensitive
 ; Format is: "[ColumName] [Regex]" (white-space separated)
+Vendor Digikey
 
 [REGEX_EXCLUDE]
 ; A series of regular expressions used to exclude parts from the BoM
