--- a/bom.ini
+++ b/bom.ini
@@ -37,8 +37,10 @@ hide_pcb_info = True
 Part Lib
 Footprint Lib
 Footprint
-R 25		; custom for thermistor
-B 25/85		; custom for thermistor
+R 25			; custom for thermistor
+B 25/85			; custom for thermistor
+Calculations	; custom for thermistor
+
 
 
 [COLUMN_ORDER]
@@ -101,4 +103,6 @@ Part	test.*point
 Footprint	test.*point
 Footprint	mount.*hole
 Footprint	fiducial
+Reference 	LOGO.*
+Reference 	BT.*
 
