--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
-CAM/
-Documentation/
+CAM
+Documentation
 
 # Temporary files
 *.000
