--- a/bom.ini
+++ b/bom.ini
@@ -23,7 +23,7 @@ fit_field = Config
 ; Make a backup of the bom before generating the new one, using the following template
 make_backup = %O.tmp
 ; Default number of boards to produce if none given on CLI with -n
-number_boards = 60
+number_boards = 40
 ; Default PCB variant if none given on CLI with -r
 board_variant = [u'default']
 ; Whether to hide headers from output file
@@ -88,7 +88,7 @@ d	diode	d_small
 ; If there are any regex defined here, only components that match against ANY of them will be included in the BOM
 ; Column names are case-insensitive
 ; Format is: "[ColumName] [Regex]" (white-space separated)
-Vendor Digikey
+; Vendor Digikey
 
 [REGEX_EXCLUDE]
 ; A series of regular expressions used to exclude parts from the BoM
